// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UrlPreviewGroupView > renders a single preview 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="previewGroup"
    >
      <div
        class="container"
      >
        <button
          aria-label="View image"
          class="preview"
        >
          <img
            alt="The element logo"
            src="/static/element.png"
            title="The element logo"
          />
        </button>
        <div
          class="textContent"
        >
          <a
            class="_typography_6v6n8_153 _font-body-lg-semibold_6v6n8_74 title"
            href="https://matrix.org"
            rel="noreferrer noopener"
            target="_blank"
          >
            A simple title
          </a>
          <p
            class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 container description"
          >
            A simple description
          </p>
        </div>
      </div>
    </div>
    <button
      aria-label="Close preview"
      class="_icon-button_1215g_8"
      data-kind="primary"
      role="button"
      style="--cpd-icon-button-size: 20px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`UrlPreviewGroupView > renders multiple previews 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="previewGroup"
    >
      <div
        class="container"
      >
        <button
          aria-label="View image"
          class="preview"
        >
          <img
            alt="The element logo"
            src="/static/element.png"
            title="The element logo"
          />
        </button>
        <div
          class="textContent"
        >
          <a
            class="_typography_6v6n8_153 _font-body-lg-semibold_6v6n8_74 title"
            href="https://matrix.org"
            rel="noreferrer noopener"
            target="_blank"
          >
            One
          </a>
          <p
            class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 container description"
          >
            A regular square image.
          </p>
        </div>
      </div>
      <div
        class="container"
      >
        <button
          aria-label="View image"
          class="preview"
        >
          <img
            alt="A dog"
            src="/static/tallImage.png"
            title="A dog"
          />
        </button>
        <div
          class="textContent"
        >
          <a
            class="_typography_6v6n8_153 _font-body-lg-semibold_6v6n8_74 title"
            href="https://matrix.org"
            rel="noreferrer noopener"
            target="_blank"
          >
            Two
          </a>
          <p
            class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 container description"
          >
            This one has a taller image which should crop nicely.
          </p>
        </div>
      </div>
      <div
        class="container"
      >
        <button
          aria-label="View image"
          class="preview"
        >
          <img
            alt="The element logo"
            src="/static/element.png"
            title="The element logo"
          />
        </button>
        <div
          class="textContent"
        >
          <a
            class="_typography_6v6n8_153 _font-body-lg-semibold_6v6n8_74 title"
            href="https://matrix.org"
            rel="noreferrer noopener"
            target="_blank"
          >
            Three
          </a>
          <p
            class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 container description"
          >
            One more description
          </p>
        </div>
      </div>
      <button
        class="_button_13vu4_8 toggleButton"
        data-kind="tertiary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        Collapse
      </button>
    </div>
    <button
      aria-label="Close preview"
      class="_icon-button_1215g_8"
      data-kind="primary"
      role="button"
      style="--cpd-icon-button-size: 20px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`UrlPreviewGroupView > renders multiple previews which are hidden 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="previewGroup"
    >
      <div
        class="container"
      >
        <button
          aria-label="View image"
          class="preview"
        >
          <img
            alt="The element logo"
            src="/static/element.png"
            title="The element logo"
          />
        </button>
        <div
          class="textContent"
        >
          <a
            class="_typography_6v6n8_153 _font-body-lg-semibold_6v6n8_74 title"
            href="https://matrix.org"
            rel="noreferrer noopener"
            target="_blank"
          >
            A simple title
          </a>
          <p
            class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 container description"
          >
            A simple description
          </p>
        </div>
      </div>
      <button
        class="_button_13vu4_8 toggleButton"
        data-kind="tertiary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        Show 9 other previews
      </button>
    </div>
    <button
      aria-label="Close preview"
      class="_icon-button_1215g_8"
      data-kind="primary"
      role="button"
      style="--cpd-icon-button-size: 20px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`UrlPreviewGroupView > renders with a compact view 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="previewGroup compactLayout"
    >
      <div
        class="container"
      >
        <button
          aria-label="View image"
          class="preview"
        >
          <img
            alt="The element logo"
            src="/static/element.png"
            title="The element logo"
          />
        </button>
        <div
          class="textContent"
        >
          <a
            class="_typography_6v6n8_153 _font-body-lg-semibold_6v6n8_74 title"
            href="https://matrix.org"
            rel="noreferrer noopener"
            target="_blank"
          >
            One
          </a>
          <p
            class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 container description"
          >
            A regular square image.
          </p>
        </div>
      </div>
      <div
        class="container"
      >
        <button
          aria-label="View image"
          class="preview"
        >
          <img
            alt="A dog"
            src="/static/tallImage.png"
            title="A dog"
          />
        </button>
        <div
          class="textContent"
        >
          <a
            class="_typography_6v6n8_153 _font-body-lg-semibold_6v6n8_74 title"
            href="https://matrix.org"
            rel="noreferrer noopener"
            target="_blank"
          >
            Two
          </a>
          <p
            class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 container description"
          >
            This one has a taller image which should crop nicely.
          </p>
        </div>
      </div>
      <div
        class="container"
      >
        <button
          aria-label="View image"
          class="preview"
        >
          <img
            alt="The element logo"
            src="/static/element.png"
            title="The element logo"
          />
        </button>
        <div
          class="textContent"
        >
          <a
            class="_typography_6v6n8_153 _font-body-lg-semibold_6v6n8_74 title"
            href="https://matrix.org"
            rel="noreferrer noopener"
            target="_blank"
          >
            Three
          </a>
          <p
            class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 container description"
          >
            One more description
          </p>
        </div>
      </div>
      <button
        class="_button_13vu4_8 toggleButton"
        data-kind="tertiary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        Collapse
      </button>
    </div>
    <button
      aria-label="Close preview"
      class="_icon-button_1215g_8"
      data-kind="primary"
      role="button"
      style="--cpd-icon-button-size: 20px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;
